--- a/scss/product.scss
+++ b/scss/product.scss
@@ -1,7 +1,9 @@
+@import "./mixin";
+
 .bodyWrapper{
     width: 100%;
 
-    .productWrapper{
+    .pcProductWrapper{
         margin: 10% auto;
         width: 75%;
 
@@ -121,3 +123,8 @@
     }
 }
 
+@include tablet{
+    .pcProductWrapper{
+        display:none;
+    }
+}
