--- a/scss/product.scss
+++ b/scss/product.scss
@@ -72,12 +72,16 @@
         .productWrapper{
             display:flex;
             justify-content: space-between;
+            align-items: center;
             width: 100%;
             padding: 10% 0;
 
             .imgSection{
-                width: 36%;
-                background-size: cover;
+                width: 40%;
+
+                img{
+                    width: 100%;
+                }
             }
 
             .productInfoWrapper{
