--- a/scss/product.scss
+++ b/scss/product.scss
@@ -91,12 +91,12 @@
                     margin: 1rem 0;
 
                     h1{
-                        font-size: 0.9rem;
+                        font-size: 0.85rem;
                     }
     
                     h2{
                         margin: 0.5rem 0;
-                        font-size: 0.8rem;
+                        font-size: 0.75rem;
                         font-weight: 500;
                     }
 
@@ -109,6 +109,8 @@
                 .purchaseBtn{
                     display: inline-block;
                     margin: 1rem 0;
+                    text-align: center;
+                    width: 6rem;
                     font-size: 0.8rem;
                     padding: 0.5rem 1.5rem;
                     background-color: #006FD4;
