--- a/scss/product.scss
+++ b/scss/product.scss
@@ -67,7 +67,7 @@
 
     .mobileProductWrapper{
         width: 80%;
-        margin: 0 auto;
+        margin: 10% auto;
 
         .productWrapper{
             display:flex;
