--- a/style/product.css
+++ b/style/product.css
@@ -65,7 +65,7 @@
 
 .bodyWrapper .mobileProductWrapper {
   width: 80%;
-  margin: 0 auto;
+  margin: 10% auto;
 }
 
 .bodyWrapper .mobileProductWrapper .productWrapper {
