--- a/scss/product.scss
+++ b/scss/product.scss
@@ -66,6 +66,7 @@
     }
 
     .mobileProductWrapper{
+        display:none;
         width: 80%;
         margin: 10% auto;
 
@@ -140,6 +141,7 @@
                 color: #fff;
             }
         }
+        
     }
 
     .productIntro{
@@ -201,7 +203,243 @@
 }
 
 @include tablet{
+
+    .bodyWrapper{
+
+        .mobileProductWrapper{
+            display:block;
+    
+            .productWrapper{
+    
+                .productInfoWrapper{
+                    width: 45%;
+    
+                    .productName{
+                        margin: 1rem 0;
+    
+                        h1{
+                            font-size: 2rem;
+                        }
+        
+                        h2{
+                            margin: 1rem 0 2rem 0;
+                            font-size: 1.5rem;
+                        }
+    
+                    }
+    
+                    .productPrice{
+                        font-size: 1rem;
+                    }
+    
+                    .purchaseBtn{
+                        margin: 2rem 0;
+                        width: 9rem;
+                        font-size: 1rem;
+                        padding: 1rem 2rem;
+                    }
+    
+    
+                }
+            }
+    
+            .buttonWrapper{
+                button{
+                    margin-right: 2rem;
+                    background-color: transparent;
+                    border-radius: 10px;
+                    display:inline-block;
+                    padding: 1rem 0;
+                    font-size: 1rem;
+                    width: 9rem;
+                    border: 1px solid #006FD4;
+                    color: #006FD4;
+                }
+            }
+        }
+
+        .productIntro{
+            padding: 5rem 0;
+
+            .programUI{
+                margin-bottom: 20%;
+                img{
+                    width: 80%;
+                }
+
+                h1{
+                    margin: 1rem 0;
+                    font-size: 1.5rem;
+                }
+
+                h2{
+                    line-height: 1.5rem;
+                    font-size: 1rem;
+                }
+            }
+
+            .productItem{
+                margin: 0 auto;
+                margin-bottom: 10%;
+                display:flex;
+                flex-direction: column;
+
+                img{
+                    width: 80%;
+                    order: 1;
+                }
+
+                .infoWrapper{
+                    width: 100%;
+                    text-align: center;
+                    order: 2;
+
+                    h1{
+                        margin: 1rem 0;
+                        width: 100%;
+                        font-size: 1.5rem;
+                    }
+
+                    h2{
+                        word-break: keep-all;
+                        font-size: 1rem;
+                    }
+                }
+            }
+        }
+    }
+
     .pcProductWrapper{
         display:none;
     }
+
+}
+
+@include mobile{
+    
+    .bodyWrapper{
+        .mobileProductWrapper{
+    
+            .productWrapper{
+                padding: 10% 0;
+    
+                .imgSection{
+                    width: 40%;
+    
+                    img{
+                        width: 100%;
+                    }
+                }
+    
+                .productInfoWrapper{
+                    width: 45%;
+    
+                    .productName{
+                        margin: 1rem 0;
+    
+                        h1{
+                            font-size: 0.85rem;
+                        }
+        
+                        h2{
+                            margin: 0.5rem 0;
+                            font-size: 0.75rem;
+                        }
+    
+                    }
+    
+                    .productPrice{
+                        font-size: 0.6rem;
+                    }
+    
+                    .purchaseBtn{
+                        margin: 1rem 0;
+                        width: 6rem;
+                        font-size: 0.8rem;
+                        padding: 0.5rem 1.5rem;
+                    }
+    
+    
+                }
+            }
+    
+            .buttonWrapper{
+                button{
+                    margin-right: 0.5rem;
+                    padding: 0.5rem 0;
+                    font-size: 0.7rem;
+                    width: 5rem;
+                }
+            }
+
+            .productInfo{
+                border-top: 1px solid #ddd;
+                margin-top: 5%;
+
+                p{
+                    margin: 1rem 0;
+                    .fa-check{
+                        font-size: 0.7rem;
+                        margin-right: 5px;
+                    }
+                    white-space: nowrap;
+                    font-size: 0.7rem;
+                }
+            }
+        }
+
+        .productIntro{
+            padding: 5rem 0;
+
+            .programUI{
+                margin-bottom: 20%;
+
+                img{
+                    width: 80%;
+                }
+
+                h1{
+                    margin: 1rem 0;
+                    font-size: 1rem;
+                }
+
+                h2{
+                    word-break: keep-all;
+                    line-height: 1.5rem;
+                    font-size: 0.8rem;
+                }
+            }
+
+            .productItem{
+                margin: 0 auto;
+                margin-bottom: 10%;
+                display:flex;
+                flex-direction: column;
+
+                img{
+                    width: 80%;
+                    order: 1;
+                }
+
+                .infoWrapper{
+                    width: 100%;
+                    text-align: center;
+                    order: 2;
+
+                    h1{
+                        margin: 1rem 0;
+                        width: 100%;
+                        font-size: 1rem;
+                    }
+
+                    h2{
+                        word-break: keep-all;
+                        font-size: 0.8rem;
+                        line-height: 1.5rem;
+                    }
+                }
+            }
+        }
+    }
+    
 }
