--- a/style/product.css
+++ b/style/product.css
@@ -64,6 +64,7 @@
 }
 
 .bodyWrapper .mobileProductWrapper {
+  display: none;
   width: 80%;
   margin: 10% auto;
 }
@@ -193,7 +194,180 @@
 }
 
 @media screen and (max-width: 1023px) {
+  .bodyWrapper .mobileProductWrapper {
+    display: block;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper {
+    width: 45%;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .productName {
+    margin: 1rem 0;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .productName h1 {
+    font-size: 2rem;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .productName h2 {
+    margin: 1rem 0 2rem 0;
+    font-size: 1.5rem;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .productPrice {
+    font-size: 1rem;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .purchaseBtn {
+    margin: 2rem 0;
+    width: 9rem;
+    font-size: 1rem;
+    padding: 1rem 2rem;
+  }
+  .bodyWrapper .mobileProductWrapper .buttonWrapper button {
+    margin-right: 2rem;
+    background-color: transparent;
+    border-radius: 10px;
+    display: inline-block;
+    padding: 1rem 0;
+    font-size: 1rem;
+    width: 9rem;
+    border: 1px solid #006FD4;
+    color: #006FD4;
+  }
+  .bodyWrapper .productIntro {
+    padding: 5rem 0;
+  }
+  .bodyWrapper .productIntro .programUI {
+    margin-bottom: 20%;
+  }
+  .bodyWrapper .productIntro .programUI img {
+    width: 80%;
+  }
+  .bodyWrapper .productIntro .programUI h1 {
+    margin: 1rem 0;
+    font-size: 1.5rem;
+  }
+  .bodyWrapper .productIntro .programUI h2 {
+    line-height: 1.5rem;
+    font-size: 1rem;
+  }
+  .bodyWrapper .productIntro .productItem {
+    margin: 0 auto;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+  }
+  .bodyWrapper .productIntro .productItem img {
+    width: 80%;
+    order: 1;
+  }
+  .bodyWrapper .productIntro .productItem .infoWrapper {
+    width: 100%;
+    text-align: center;
+    order: 2;
+  }
+  .bodyWrapper .productIntro .productItem .infoWrapper h1 {
+    margin: 1rem 0;
+    width: 100%;
+    font-size: 1.5rem;
+  }
+  .bodyWrapper .productIntro .productItem .infoWrapper h2 {
+    word-break: keep-all;
+    font-size: 1rem;
+  }
   .pcProductWrapper {
     display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .bodyWrapper .mobileProductWrapper .productWrapper {
+    padding: 10% 0;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .imgSection {
+    width: 40%;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .imgSection img {
+    width: 100%;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper {
+    width: 45%;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .productName {
+    margin: 1rem 0;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .productName h1 {
+    font-size: 0.85rem;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .productName h2 {
+    margin: 0.5rem 0;
+    font-size: 0.75rem;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .productPrice {
+    font-size: 0.6rem;
+  }
+  .bodyWrapper .mobileProductWrapper .productWrapper .productInfoWrapper .purchaseBtn {
+    margin: 1rem 0;
+    width: 6rem;
+    font-size: 0.8rem;
+    padding: 0.5rem 1.5rem;
+  }
+  .bodyWrapper .mobileProductWrapper .buttonWrapper button {
+    margin-right: 0.5rem;
+    padding: 0.5rem 0;
+    font-size: 0.7rem;
+    width: 5rem;
+  }
+  .bodyWrapper .mobileProductWrapper .productInfo {
+    border-top: 1px solid #ddd;
+    margin-top: 5%;
+  }
+  .bodyWrapper .mobileProductWrapper .productInfo p {
+    margin: 1rem 0;
+    white-space: nowrap;
+    font-size: 0.7rem;
+  }
+  .bodyWrapper .mobileProductWrapper .productInfo p .fa-check {
+    font-size: 0.7rem;
+    margin-right: 5px;
+  }
+  .bodyWrapper .productIntro {
+    padding: 5rem 0;
+  }
+  .bodyWrapper .productIntro .programUI {
+    margin-bottom: 20%;
+  }
+  .bodyWrapper .productIntro .programUI img {
+    width: 80%;
+  }
+  .bodyWrapper .productIntro .programUI h1 {
+    margin: 1rem 0;
+    font-size: 1rem;
+  }
+  .bodyWrapper .productIntro .programUI h2 {
+    word-break: keep-all;
+    line-height: 1.5rem;
+    font-size: 0.8rem;
+  }
+  .bodyWrapper .productIntro .productItem {
+    margin: 0 auto;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+  }
+  .bodyWrapper .productIntro .productItem img {
+    width: 80%;
+    order: 1;
+  }
+  .bodyWrapper .productIntro .productItem .infoWrapper {
+    width: 100%;
+    text-align: center;
+    order: 2;
+  }
+  .bodyWrapper .productIntro .productItem .infoWrapper h1 {
+    margin: 1rem 0;
+    width: 100%;
+    font-size: 1rem;
+  }
+  .bodyWrapper .productIntro .productItem .infoWrapper h2 {
+    word-break: keep-all;
+    font-size: 0.8rem;
+    line-height: 1.5rem;
   }
 }
