--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -199,6 +199,7 @@ header {
         justify-content: space-between;
 
         button {
+            font-size: 1rem;
             text-align: center;
             color: #fff;
             border: none;
