--- a/style/reset.css
+++ b/style/reset.css
@@ -191,6 +191,7 @@ header .mobileNav .hamburgerMenu .line::after {
 }
 
 .modal .buttonWrapper button {
+  font-size: 1rem;
   text-align: center;
   color: #fff;
   border: none;
