--- a/style/contact.css
+++ b/style/contact.css
@@ -143,66 +143,66 @@
   word-break: keep-all;
 }
 
-.contactWrapper .boardNav {
+.contactWrapper .pcBoardNav {
   width: 100%;
   border-bottom: 1px solid #ddd;
 }
 
-.contactWrapper .boardNav .mainNav {
+.contactWrapper .pcBoardNav .mainNav {
   display: flex;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list {
   width: 33.3333%;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list:nth-child(1) .subject {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list:nth-child(1) .subject {
   background-color: #006FD4;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list:nth-child(1) .subject:hover {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list:nth-child(1) .subject:hover {
   background-color: #0258a8;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list:nth-child(2) .subject {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list:nth-child(2) .subject {
   background-color: #2688E2;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list:nth-child(2) .subject:hover {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list:nth-child(2) .subject:hover {
   background-color: #1869c5;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list:nth-child(3) .subject {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list:nth-child(3) .subject {
   background-color: #57AFFF;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list:nth-child(3) .subject:hover {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list:nth-child(3) .subject:hover {
   background-color: #4083db;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list a {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list a {
   color: #fff;
   padding: 1.5rem 2rem;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list a .fa-chevron-right {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list a .fa-chevron-right {
   margin-left: 1rem;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list .subNav li {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list .subNav li {
   background-color: #fff;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list .subNav li a {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list .subNav li a {
   font-size: 0.9rem;
   color: #000;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list .subNav li a:hover {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list .subNav li a:hover {
   background-color: #eee;
 }
 
-.contactWrapper .boardNav .mainNav .mainNav-list .subNav li a span {
+.contactWrapper .pcBoardNav .mainNav .mainNav-list .subNav li a span {
   display: inline;
   margin-right: 1rem;
   font-size: 0.9rem;
@@ -210,4 +210,155 @@
   font-weight: 700;
   color: #fff;
   padding: 0.5rem 1rem;
+}
+
+.contactWrapper .mobileBoardNav {
+  display: none;
+  width: 100%;
+}
+
+.contactWrapper .mobileBoardNav .mainNav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li {
+  width: 33.3333%;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li a {
+  font-size: 1rem;
+  text-align: center;
+  padding: 3rem 0;
+  color: #fff;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li a i {
+  display: block;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li:nth-child(1) .subject {
+  background-color: #006FD4;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li:nth-child(1) .subject:hover {
+  background-color: #0258a8;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li:nth-child(2) .subject {
+  background-color: #2688E2;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li:nth-child(2) .subject:hover {
+  background-color: #1869c5;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li:nth-child(3) .subject {
+  background-color: #57AFFF;
+}
+
+.contactWrapper .mobileBoardNav .mainNav li:nth-child(3) .subject:hover {
+  background-color: #4083db;
+}
+
+@media screen and (max-width: 767px) {
+  .contactWrapper .searchSection h1 {
+    font-size: 1rem;
+  }
+  .contactWrapper .searchSection h2 {
+    margin: 1rem 0;
+    font-size: 0.8rem;
+  }
+  .contactWrapper .searchSection .searchBar {
+    width: 80%;
+  }
+  .contactWrapper .searchSection .searchBar input {
+    padding: 0.5rem;
+  }
+  .contactWrapper .searchSection .searchBar .fa-search {
+    right: 5%;
+    font-size: 1rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .subject {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .subject h1 {
+    color: #fff;
+    font-size: 1.2rem;
+    margin-right: 1rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .subject img {
+    width: 10%;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem {
+    cursor: pointer;
+    padding: 1.5rem 2rem;
+    width: 100%;
+    background-color: #fff;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem h1 {
+    font-size: 1.2rem;
+    margin-bottom: 1.2rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem p {
+    font-size: 1rem;
+    line-height: 1rem;
+    word-break: keep-all;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer {
+    margin: 3rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer #chatSection h2 {
+    color: #006FD4;
+    cursor: pointer;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection {
+    width: 100%;
+    padding: 1rem 1rem;
+    background-color: #f7f7f7;
+    text-align: center;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection i {
+    padding: 2rem 0;
+    font-size: 2rem;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection h1 {
+    font-size: 1rem;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8rem;
+    padding: 0.8rem 0;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection .fa-chevron-right {
+    margin-left: 0.5rem;
+    padding: 0;
+    font-size: 1rem;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection p {
+    font-size: 0.9rem;
+    line-height: 1.2rem;
+    word-break: keep-all;
+  }
+  .contactWrapper .pcBoardNav {
+    display: none;
+  }
+  .contactWrapper .mobileBoardNav {
+    display: block;
+  }
 }
