--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -362,14 +362,15 @@
                         }
 
                         h1 {
-                            font-size: 1.2rem;
+                            font-size: 1rem;
                             margin-bottom: 1.2rem;
                         }
 
 
 
                         p {
-                            font-size: 1rem;
+                            text-indent: 5px;
+                            font-size: 0.8rem;
                             line-height: 1rem;
                             word-break: keep-all;
                         }
