--- a/style/contact.css
+++ b/style/contact.css
@@ -311,11 +311,12 @@
     margin-bottom: 0;
   }
   .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem h1 {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-bottom: 1.2rem;
   }
   .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem p {
-    font-size: 1rem;
+    text-indent: 5px;
+    font-size: 0.8rem;
     line-height: 1rem;
     word-break: keep-all;
   }
