--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -295,6 +295,169 @@
     }
 }
 
+@include tablet{
+
+    .contactWrapper {
+        .searchSection {
+
+            h1 {
+                font-size: 1.2rem;
+            }
+
+            h2 {
+                margin: 1.5rem 0;
+                font-size: 1rem;
+            }
+
+            .searchBar {
+                width: 100%;
+
+                input {
+                    padding: 0.8rem;
+                }
+
+                .fa-search {
+                    right: 5%;
+                    font-size: 1.2rem;
+                }
+            }
+
+        }
+
+        .faqWrapper {
+
+            .faqSection {
+
+                .subject {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 1rem;
+
+                    h1 {
+                        color: #fff;
+                        font-size: 1.5rem;
+                        margin-right: 1rem;
+                    }
+
+                    img {
+                        width: 8%;
+                    }
+                }
+
+                .faqContainer {
+                    display: flex;
+                    justify-content: space-between;
+                    flex-direction: column;
+
+                    .faqItem {
+                        cursor: pointer;
+                        padding: 2.5rem;
+                        width: 100%;
+                        background-color: #fff;
+                        margin-bottom: 1rem;
+
+                        &:last-child{
+                            margin-bottom: 0;
+                        }
+
+                        h1 {
+                            font-size: 1.2rem;
+                            margin-bottom: 1.2rem;
+                        }
+
+
+
+                        p {
+                            text-indent: 5px;
+                            font-size: 1rem;
+                            line-height: 1rem;
+                            word-break: keep-all;
+                        }
+
+                    }
+                }
+            }
+        }
+
+        .mtomWrapper {
+
+            .mtomContainer {
+                margin: 3rem 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                #chatSection {
+                    margin-bottom: 0;
+                    h2 {
+                        color: #006FD4;
+                        cursor: pointer;
+                    }
+
+                }
+
+                .mtomSection {
+                    width: 100%;
+                    padding: 2rem 1rem;
+                    background-color: #f7f7f7;
+                    text-align: center;
+                    margin-bottom: 1rem;
+
+                    i {
+                        padding: 2rem 0;
+                        font-size: 4rem;
+                    }
+
+                    h1{
+                        font-size: 1.2rem;
+                    }
+
+                    h2 {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        font-size: 1rem;
+                        padding: 0.8rem 0;
+                    }
+
+
+
+                    .fa-chevron-right {
+                        margin-left: 0.5rem;
+                        padding: 0;
+                        font-size: 1rem;
+                    }
+
+                    p {
+                        font-size: 1rem;
+                        line-height: 1.2rem;
+                        word-break: keep-all;
+                    }
+                }
+            }
+
+        }
+
+        .pcBoardNav {
+            display:none;
+        }
+
+        .mobileBoardNav{
+            display: block;
+
+            .mainNav{
+                li{
+                    a{
+                        font-size: 1rem;
+                    }
+                }
+            }
+        }
+    }
+
+
+}
+
 @include mobile {
 
 
