--- a/style/contact.css
+++ b/style/contact.css
@@ -264,6 +264,117 @@
   background-color: #4083db;
 }
 
+@media screen and (max-width: 1023px) {
+  .contactWrapper .searchSection h1 {
+    font-size: 1.2rem;
+  }
+  .contactWrapper .searchSection h2 {
+    margin: 1.5rem 0;
+    font-size: 1rem;
+  }
+  .contactWrapper .searchSection .searchBar {
+    width: 100%;
+  }
+  .contactWrapper .searchSection .searchBar input {
+    padding: 0.8rem;
+  }
+  .contactWrapper .searchSection .searchBar .fa-search {
+    right: 5%;
+    font-size: 1.2rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .subject {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .subject h1 {
+    color: #fff;
+    font-size: 1.5rem;
+    margin-right: 1rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .subject img {
+    width: 8%;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem {
+    cursor: pointer;
+    padding: 2.5rem;
+    width: 100%;
+    background-color: #fff;
+    margin-bottom: 1rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem:last-child {
+    margin-bottom: 0;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem h1 {
+    font-size: 1.2rem;
+    margin-bottom: 1.2rem;
+  }
+  .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem p {
+    text-indent: 5px;
+    font-size: 1rem;
+    line-height: 1rem;
+    word-break: keep-all;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer {
+    margin: 3rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer #chatSection {
+    margin-bottom: 0;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer #chatSection h2 {
+    color: #006FD4;
+    cursor: pointer;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection {
+    width: 100%;
+    padding: 2rem 1rem;
+    background-color: #f7f7f7;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection i {
+    padding: 2rem 0;
+    font-size: 4rem;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection h1 {
+    font-size: 1.2rem;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    padding: 0.8rem 0;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection .fa-chevron-right {
+    margin-left: 0.5rem;
+    padding: 0;
+    font-size: 1rem;
+  }
+  .contactWrapper .mtomWrapper .mtomContainer .mtomSection p {
+    font-size: 1rem;
+    line-height: 1.2rem;
+    word-break: keep-all;
+  }
+  .contactWrapper .pcBoardNav {
+    display: none;
+  }
+  .contactWrapper .mobileBoardNav {
+    display: block;
+  }
+  .contactWrapper .mobileBoardNav .mainNav li a {
+    font-size: 1rem;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .contactWrapper .searchSection h1 {
     font-size: 1rem;
