--- a/scss/board.scss
+++ b/scss/board.scss
@@ -1,3 +1,5 @@
+@import "./mixin";
+
 .noticeWrapper{
     width: 75%;
     margin: 5rem auto;
@@ -11,7 +13,7 @@
         padding: 2rem 0;
     }
 
-    .tableContents{
+    .pcTableContents{
         margin-top: 2rem;
         display:grid;
         grid-template-columns: 60% 20% 20%;
@@ -36,7 +38,7 @@
             padding: 1.5rem 1rem;
             border-bottom: 1px solid #C5C5C5;
 
-            span{
+            .imp{
                 margin-right: 1rem;
                 font-size: 0.9rem;
                 background-color: #FF6D0C;
@@ -64,4 +66,72 @@
             background-color: #006FD4;
         }
     }
+}
+
+@include mobile{
+
+    .noticeWrapper{
+        width: 75%;
+        margin: 5rem auto;
+    
+        h1{
+            font-size: 1rem;
+        }
+    
+        h2{
+            font-size: 0.8rem;
+            font-weight: 500;
+            padding: 1rem 0;
+        }
+    
+        .pcTableContents{
+            display:none;
+        }
+
+        .mobileTableContents{
+            margin-top: 2rem;
+
+            .tableClassifi{
+                background-color: #006FD4;
+                padding: 0.5rem;
+                color: #fff;
+                font-size: 0.7rem;
+            }
+
+            .tableItem{
+                border-bottom: 1px solid #ddd;
+                .imp{
+                    margin-right: 1rem;
+                    font-size: 0.7rem;
+                    background-color: #FF6D0C;
+                    font-weight: 700;
+                    color: #fff;
+                    padding: 0.3rem 0.8rem;
+                }
+
+                .date{
+                    line-height: 1rem;
+                    font-size: 0.5rem;
+                }
+
+                padding: 1rem 0.5rem;
+                font-size: 0.8rem;
+            }
+        }
+    
+        .pageNumberWrapper{
+            margin-top: 1.5rem;
+            text-align: center;
+    
+            .pageNumber{
+                display: inline-block;
+                color: #fff;
+                width: 2rem;
+                height: 2rem;
+                line-height: 2rem;
+                background-color: #006FD4;
+            }
+        }
+    }
+
 }
