--- a/scss/board.scss
+++ b/scss/board.scss
@@ -93,7 +93,7 @@
 
             .tableClassifi{
                 background-color: #006FD4;
-                padding: 0.5rem;
+                padding: 1rem 0.5rem;
                 color: #fff;
                 font-size: 0.8rem;
             }
@@ -110,8 +110,9 @@
                 }
 
                 .date{
-                    line-height: 1rem;
-                    font-size: 0.5rem;
+                    float:right;
+                    line-height: 0.6rem;
+                    font-size: 0.3rem;
                 }
 
                 padding: 1rem 0.5rem;
