--- a/style/board.css
+++ b/style/board.css
@@ -87,7 +87,7 @@
   }
   .noticeWrapper .mobileTableContents .tableClassifi {
     background-color: #006FD4;
-    padding: 0.5rem;
+    padding: 1rem 0.5rem;
     color: #fff;
     font-size: 0.8rem;
   }
@@ -105,8 +105,9 @@
     padding: 0.3rem 0.8rem;
   }
   .noticeWrapper .mobileTableContents .tableItem .date {
-    line-height: 1rem;
-    font-size: 0.5rem;
+    float: right;
+    line-height: 0.6rem;
+    font-size: 0.3rem;
   }
   .noticeWrapper .pageNumberWrapper {
     margin-top: 1.5rem;
