--- a/scss/board.scss
+++ b/scss/board.scss
@@ -93,7 +93,7 @@
 
             .tableClassifi{
                 background-color: #006FD4;
-                padding: 1rem 0.5rem;
+                padding: 1rem;
                 color: #fff;
                 font-size: 0.8rem;
             }
