--- a/style/board.css
+++ b/style/board.css
@@ -87,7 +87,7 @@
   }
   .noticeWrapper .mobileTableContents .tableClassifi {
     background-color: #006FD4;
-    padding: 1rem 0.5rem;
+    padding: 1rem;
     color: #fff;
     font-size: 0.8rem;
   }
